--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,3 +2,9 @@
    Import partials below
 */
 @import './normalize';
+@import './header/index';
+@import './about-me/index';
+@import './about-me/index';
+@import './about-me/index';
+@import './about-me/index';
+@import './about-me/index';
