--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,10 +8,10 @@
 /*
     Blocks
 */
-@import './header/index';
-@import './main-inform/index';
+// @import './header/index';
+// @import './main-inform/index';
 @import './about-me/index';
-@import './skills/index';
-@import './critaries/index';
-@import './programm/index';
-@import './detalis/index';
+// @import './skills/index';
+// @import './critaries/index';
+// @import './programm/index';
+// @import './detalis/index';
