add block programm

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,6 +4,7 @@
 @import './reset';
 @import './normalize';
 @import './fonts';
+@import './varibles';
 
 /*
     Blocks
@@ -13,5 +14,5 @@
 @import './about-me/index';
 // @import './skills/index';
 // @import './critaries/index';
-// @import './programm/index';
+@import './programm/index';
 // @import './detalis/index';
