--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -15,4 +15,4 @@
 // @import './skills/index';
 // @import './critaries/index';
 @import './programm/index';
-// @import './detalis/index';
+@import './detalis/index';
