--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,7 +11,8 @@
 // @import './header/index';
 // @import './main-inform/index';
 @import './about-me/index';
-// @import './skills/index';
-// @import './critaries/index';
+@import './skills/index';
+@import './cretaries/index';
 @import './programm/index';
 @import './detalis/index';
+ 
