--- a/src/sass/cretaries/320.scss
+++ b/src/sass/cretaries/320.scss
@@ -1,25 +1,38 @@
-.slider-record {
-  overflow: hidden;
-
-    &__inner {
-      width: 94%;
-      margin: 0 auto;
-    }
-
-    &__wrapper-tittle {
-      padding-top: 40px;
-    }
+.cretaries {
+  &-wrapper {
+    min-width: 320px;
+    width: 94%;
+    margin: 0 auto;
+    padding: 0 3% 40px;
+  }
   
-    &__tittle {
-      @include tittle;
-    }
-  }  
+  &__header {
+    width: 305px;
+  }
+  
+  &__tittle {
+    @include tittle;
+    margin-bottom: 35px; 
+  }
 
+  &__main {
+
+  }
+
+  &__media {
+    width: 35%;
+  }
+
+  &__photo {
+    display: none;
+    width: 275px;
+    margin: 0 auto;
+  }
 
   .slider-1 {
     position: relative;
     overflow: hidden;
-    padding: 0 15px;
+    padding: 0 35px;
   }
 
   .slider__wrapper-1 {
@@ -34,7 +47,7 @@
   }
   
   .slider__content-1 {
-    width: 65%;
+    width: 80%;
     margin: 10px auto;
     padding: 2%;
     box-shadow: -3px 2px 10px 3px #e9e9e9;
@@ -50,7 +63,7 @@
     top: 0;
     align-items: center;
     justify-content: center;
-    width: 20px;
+    width: 60px;
     color: #fff;
     text-align: center;
     bottom: 0;
@@ -88,3 +101,4 @@
   .slider__control_right-1::before {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23424242' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   }
+}
