--- a/src/sass/varibles.scss
+++ b/src/sass/varibles.scss
@@ -1,3 +1,18 @@
 @mixin font-size($font-size){
     font-size: ($font-size * 2);
 }
+
+@mixin tittle {
+    font: {
+        family: 'Acrom-ExtraBold';
+        size: 2.2918rem;
+    }
+}
+
+@mixin text {
+    font: {
+        family: 'AcromRegular';
+        size: 1.041rem;
+    }
+    line-height: 25px;
+}
