--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,8 +8,8 @@
 /*
     Blocks
 */
-// @import './header/index';
-// @import './main-inform/index';
+@import './header/index';
+@import './main-inform/index';
 @import './about-me/index';
 @import './skills/index';
 @import './cretaries/index';
