--- a/src/sass/skills/768.scss
+++ b/src/sass/skills/768.scss
@@ -7,8 +7,9 @@
       &::after {
         content: '';
         display: block;
-        top: 8%;
-        right: 1%;
+        width: 45%;
+        top: 3%;
+        right: 4%;
       }
     }
     
