--- a/src/sass/skills/1200.scss
+++ b/src/sass/skills/1200.scss
@@ -18,15 +18,12 @@
       line-height: 85px;
     }
 
-    // &__text {
-      // font-size: 1.5em;
-      // line-height: 35px;
-
-      // &::after {
-      //   width: 75px;
-      //   height: 10px;
-      //   top: 5%;
-      // }
-    // }
+    &__text {
+      @include text-big;
+      
+      &::after {
+        left: -16%;
+      }
+    }
   }
 }
