--- a/src/sass/skills/992.scss
+++ b/src/sass/skills/992.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 991px) {
+@media screen and (min-width: 992px) {
   .skills {
     .wrapper {
       width: 80%;
@@ -7,7 +7,8 @@
     }
 
     &__content {
-      width: 40%;
+      width: 55%;
+      min-width: 540px;
     }
   }
 }
