--- a/src/sass/about-me/320.scss
+++ b/src/sass/about-me/320.scss
@@ -4,22 +4,24 @@
     &__inner {
       width: 94%;
       margin: 0 auto;
+      padding: 0 3%;
     }
-
+    
     &__wrapper-tittle {
       padding-top: 40px;
     }
-  
+    
     &__tittle {
       @include tittle;
     }
-  }  
-
+  }
 
   .slider-1 {
     position: relative;
     overflow: hidden;
-    padding: 0 15px;
+    padding: 20px 0;
+    max-width: 540px;
+    margin: 0 auto;
   }
 
   .slider__wrapper-1 {
@@ -34,14 +36,25 @@
   }
   
   .slider__content-1 {
-    width: 65%;
+    width: 75%;
     margin: 10px auto;
-    padding: 2%;
+    padding: 6%;
     box-shadow: -3px 2px 10px 3px #e9e9e9;
   }
 
   .slider__text-1 {
     @include text;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background-color: #f06e2c;
+      top: -15px;
+      left: 0;
+    }
   }
 
   .slider__control-1 {
