--- a/src/sass/cretaries/320.scss
+++ b/src/sass/cretaries/320.scss
@@ -1,26 +1,13 @@
 .cretaries {
   &-wrapper {
-    min-width: 320px;
     width: 94%;
     margin: 0 auto;
-    padding: 0 3% 40px;
+    padding: 0 3%;
   }
-  
-  &__header {
-    width: 305px;
-  }
-  
+
   &__tittle {
     @include tittle;
-    margin-bottom: 35px; 
-  }
-
-  &__main {
-
-  }
-
-  &__media {
-    width: 35%;
+    margin-top: 40px;
   }
 
   &__photo {
@@ -29,63 +16,77 @@
     margin: 0 auto;
   }
 
-  .slider-1 {
+  .slider-2 {
     position: relative;
     overflow: hidden;
-    padding: 0 35px;
+    max-width: 540px;
+    margin: 0 auto;
+    padding: 30px 0;
   }
 
-  .slider__wrapper-1 {
+  .slider__wrapper-2 {
     display: flex;
     transition: transform 0.6s ease;
   }
 
-  .slider__item-1 {
+  .slider__item-2 {
     flex: 0 0 100%;
     display: flex;
     align-items: center;
   }
   
-  .slider__content-1 {
-    width: 80%;
+  .slider__content-2 {
+    width: 75%;
     margin: 10px auto;
-    padding: 2%;
+    padding: 6%;
     box-shadow: -3px 2px 10px 3px #e9e9e9;
   }
 
-  .slider__text-1 {
+  .slider__text-2 {
     @include text;
+    position: relative;
+
+    &::before {
+      content: '[ 001 ]';
+      position: absolute;
+      top: 26px;
+      line-height: 17px;
+      font-size: 14px;
+      background: #ef7330;
+      transform: rotate(90deg);
+      left: -37px;
+    }
   }
 
-  .slider__control-1 {
+  .slider__control-2 {
     position: absolute;
     display: flex;
     top: 0;
     align-items: center;
     justify-content: center;
-    width: 60px;
+    width: 20px;
     color: #fff;
     text-align: center;
     bottom: 0;
     background: #fff;
   }
 
-  .slider__control-1:hover,
-  .slider__control-1:focus {
+  .slider__control-2:hover,
+  .slider__control-2:focus {
     color: #fff;
     text-decoration: none;
     outline: 0;
   }
 
-  .slider__control_left-1 {
+  .slider__control_left-2 {
     left: 0;
   }
 
-  .slider__control_right-1 {
+  .slider__control_right-2 {
     right: 0;
   }
 
-  .slider__control-1::before {
+  .slider__control-2::before {
     content: '';
     display: inline-block;
     width: 20px;
@@ -94,11 +95,11 @@
     background-size: 100% 100%;
   }
 
-  .slider__control_left-1::before {
+  .slider__control_left-2::before {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23424242' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
   }
 
-  .slider__control_right-1::before {
+  .slider__control_right-2::before {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23424242' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   }
 }
