--- a/src/sass/main-inform/768.scss
+++ b/src/sass/main-inform/768.scss
@@ -1,20 +1,58 @@
-@media screen and (min-width:768px) and (max-with:960px) {
+@media screen and (min-width:768px) {
+    .section__first {
+        overflow: hidden;
+        max-width: 768px;
+    }
+
     .introduction__part {
         display: flex;
         justify-content: space-between;
-        flex-direction: row;
+        flex-direction: row; 
         padding-bottom: 60px;
     }
 
+    .text__inform {
+        font-size: 16px; 
+    }
+
+    .picture {
+        background: #000000;
+        height: 500px;
+    }
+
+    .picture__first { 
+        width: 360px; 
+        height: 428px;
+    }
+
+    .inform__title {
+        @include tittle;
+    } 
+
+    .text__inform {
+        padding-left: 91px;
+    }
+
+    .icon__dash::after {
+        width: 56px;
+        left: 29px;
+    }
+
+    .text__inform--description {
+        display: block;
+        width: 320px;
+    }
+
     .introduction__part--text {
-        width: 310px;
-        padding-top: 60px;
+        position: relative;
+        padding-top: 30px;
+        width: 350px;
+        height: 400px;
     }
 
     .icon__square::after {
         content: '';
-        margin-left: 6px;
-        margin-top: 30px;
+        margin-top: -30px;
     }
 
 }
