--- a/src/sass/about-me/320.scss
+++ b/src/sass/about-me/320.scss
@@ -67,7 +67,7 @@
     color: #fff;
     text-align: center;
     bottom: 0;
-    background: #fff;
+    cursor: pointer;
   }
 
   .slider__control-1:hover,
