--- a/src/sass/cretaries/320.scss
+++ b/src/sass/cretaries/320.scss
@@ -47,7 +47,7 @@
     width: 75%;
     margin: 10px auto;
     padding: 6%;
-    box-shadow: -3px 2px 10px 3px #e9e9e9;
+    box-shadow: -3px 2px 10px 3px #e9e9e9; 
   }
 
   .slider__text-2 {
@@ -76,7 +76,7 @@
     color: #fff;
     text-align: center;
     bottom: 0;
-    background: #fff;
+    cursor: pointer;
   }
 
   .slider__control-2:hover,
