--- a/src/sass/programm/960.scss
+++ b/src/sass/programm/960.scss
@@ -36,7 +36,7 @@
         margin-top: 50px; 
     }
     .programm__title{
-    @include font-size(16.8pt); 
+        font-size: 2.2918rem; 
     }
      
 }
