--- a/src/sass/about-me/320.scss
+++ b/src/sass/about-me/320.scss
@@ -8,11 +8,12 @@
     }
     
     &__wrapper-tittle {
-      padding-top: 40px;
+      padding-top: 20px;
     }
     
-    &__tittle {
-      @include tittle;
+    &__tittle { 
+      @include subtittle;
+      
     }
   }
 
