--- a/src/sass/cretaries/320.scss
+++ b/src/sass/cretaries/320.scss
@@ -6,14 +6,13 @@
   }
 
   &__tittle {
-    @include tittle;
+    @include subtittle;
 
     margin-bottom: 35px; 
   }
 
   &__media {
     width: 35%;
-
     margin-top: 40px;
 
   }
@@ -56,7 +55,7 @@
 
     &::before {
       content: '[ 001 ]';
-      position: absolute;
+      position: absolute; 
       top: 26px;
       line-height: 17px;
       font-size: 14px;
